// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<AccountsCard /> > it renders an AccountsCard component with title as expected 1`] = `
<body>
  <div>
    <script
      nonce=""
    >
      ((e,i,s,u,m,a,l,h)=&gt;
      {let d=document.documentElement,w=["light","dark"];function p(n){(Array.isArray(e)?e:[e]).forEach(y=&gt;
      {let k=y==="class",S=k&&a?m.map(f=&gt;
      a[f]||f):m;k?(d.classList.remove(...S),d.classList.add(a&&a[n]?a[n]:n)):d.setAttribute(y,n)}),R(n)}function R(n){h&&w.includes(n)&&(d.style.colorScheme=n)}function c(){return window.matchMedia("(prefers-color-scheme: dark)").matches?"dark":"light"}if(u)p(u);else try{let n=localStorage.getItem(i)||s,y=l&&n==="system"?c():n;p(y)}catch(n){}})("class","theme","system",null,["light","dark"],null,true,true)
    </script>
    <div
      class="pos_relative trs_all_0.3s_ease-in-out bd_1px_solid_token(colors.gray.500)! [&:hover]:bx-sh_2px_5px_8px_0px_token(colors.gray.500)! [&:hover]:trf_translate3d(-2px,_-5px,_-5px) chakra-card__root css-af7wrq"
      id="123456"
      title="My curent account"
    >
      <div
        class="chakra-card__header css-svbf1u"
        style="cursor: pointer;"
      >
        <h5
          class="chakra-heading css-gl11ui"
        >
          Current account
        </h5>
        <h4
          class="chakra-heading css-21g0wk"
        >
          My curent account
        </h4>
      </div>
      <div
        class="chakra-card__body css-k5tkvr"
        style="cursor: pointer;"
      >
        <div
          class="chakra-stack css-1y3f6ad"
        >
          <dl
            class="chakra-stat__root css-7kqs0d"
          >
            <dt
              class="chakra-stat__label css-lx24hk"
            >
              previous:
            </dt>
            <dd
              class="chakra-stat__valueText css-1e5w1gw"
            >
              £11,000
            </dd>
            <span
              class="chakra-stat__helpText css-1p340iu"
            >
              <span
                class="chakra-badge css-qpj65r"
              >
                <span
                  class="chakra-stat__indicator css-zaoojb"
                  data-type="up"
                >
                  <svg
                    class="css-1tn7tyl"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="m5 12 7-7 7 7"
                    />
                    <path
                      d="M12 19V5"
                    />
                  </svg>
                </span>
                10
                %
              </span>
            </span>
          </dl>
          <dl
            class="chakra-stat__root css-7kqs0d"
          >
            <dt
              class="chakra-stat__label css-lx24hk"
            >
              current:
            </dt>
            <dd
              class="chakra-stat__valueText css-1e5w1gw"
            >
              £12,000
            </dd>
            <span
              class="chakra-stat__helpText css-1p340iu"
            >
              <span
                class="chakra-badge css-qpj65r"
              >
                <span
                  class="chakra-stat__indicator css-zaoojb"
                  data-type="up"
                >
                  <svg
                    class="css-1tn7tyl"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="m5 12 7-7 7 7"
                    />
                    <path
                      d="M12 19V5"
                    />
                  </svg>
                </span>
                9
                %
              </span>
            </span>
          </dl>
        </div>
        <div
          class="recharts-responsive-container"
          style="width: 100%; height: 95%; min-width: 0;"
        >
          <div
            style="width: 0px; height: 0px; overflow: visible;"
          />
        </div>
      </div>
      <div
        class="chakra-card__footer css-whgv0v"
      >
        <div
          class="chakra-group css-gjsy4q"
        >
          <button
            class="chakra-button css-11vqng1"
            data-first=""
            data-group-item=""
            style="--group-count: 2; --group-index: 0;"
            type="button"
          >
            view
          </button>
          <button
            class="chakra-button css-11vqng1"
            type="button"
          >
            edit
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`<AccountsCard with increasing values > should match snapshot for account with increasing values 1`] = `
<body>
  <div>
    <script
      nonce=""
    >
      ((e,i,s,u,m,a,l,h)=&gt;
      {let d=document.documentElement,w=["light","dark"];function p(n){(Array.isArray(e)?e:[e]).forEach(y=&gt;
      {let k=y==="class",S=k&&a?m.map(f=&gt;
      a[f]||f):m;k?(d.classList.remove(...S),d.classList.add(a&&a[n]?a[n]:n)):d.setAttribute(y,n)}),R(n)}function R(n){h&&w.includes(n)&&(d.style.colorScheme=n)}function c(){return window.matchMedia("(prefers-color-scheme: dark)").matches?"dark":"light"}if(u)p(u);else try{let n=localStorage.getItem(i)||s,y=l&&n==="system"?c():n;p(y)}catch(n){}})("class","theme","system",null,["light","dark"],null,true,true)
    </script>
    <div
      class="pos_relative trs_all_0.3s_ease-in-out bd_1px_solid_token(colors.gray.500)! [&:hover]:bx-sh_2px_5px_8px_0px_token(colors.gray.500)! [&:hover]:trf_translate3d(-2px,_-5px,_-5px) chakra-card__root css-af7wrq"
      id="123456"
      title="My curent account"
    >
      <div
        class="chakra-card__header css-svbf1u"
        style="cursor: pointer;"
      >
        <h5
          class="chakra-heading css-gl11ui"
        >
          Current account
        </h5>
        <h4
          class="chakra-heading css-21g0wk"
        >
          My curent account
        </h4>
      </div>
      <div
        class="chakra-card__body css-k5tkvr"
        style="cursor: pointer;"
      >
        <div
          class="chakra-stack css-1y3f6ad"
        >
          <dl
            class="chakra-stat__root css-7kqs0d"
          >
            <dt
              class="chakra-stat__label css-lx24hk"
            >
              previous:
            </dt>
            <dd
              class="chakra-stat__valueText css-1e5w1gw"
            >
              £10,000
            </dd>
            <span
              class="chakra-stat__helpText css-1p340iu"
            >
              <span
                class="chakra-badge css-11y24gn"
              >
                <span
                  class="chakra-stat__indicator css-zaoojb"
                  data-type="down"
                >
                  <svg
                    class="css-1tn7tyl"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 5v14"
                    />
                    <path
                      d="m19 12-7 7-7-7"
                    />
                  </svg>
                </span>
                -29
                %
              </span>
            </span>
          </dl>
          <dl
            class="chakra-stat__root css-7kqs0d"
          >
            <dt
              class="chakra-stat__label css-lx24hk"
            >
              current:
            </dt>
            <dd
              class="chakra-stat__valueText css-1e5w1gw"
            >
              £9,000
            </dd>
            <span
              class="chakra-stat__helpText css-1p340iu"
            >
              <span
                class="chakra-badge css-11y24gn"
              >
                <span
                  class="chakra-stat__indicator css-zaoojb"
                  data-type="down"
                >
                  <svg
                    class="css-1tn7tyl"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 5v14"
                    />
                    <path
                      d="m19 12-7 7-7-7"
                    />
                  </svg>
                </span>
                -10
                %
              </span>
            </span>
          </dl>
        </div>
        <div
          class="recharts-responsive-container"
          style="width: 100%; height: 95%; min-width: 0;"
        >
          <div
            style="width: 0px; height: 0px; overflow: visible;"
          />
        </div>
      </div>
      <div
        class="chakra-card__footer css-whgv0v"
      >
        <div
          class="chakra-group css-gjsy4q"
        >
          <button
            class="chakra-button css-11vqng1"
            data-first=""
            data-group-item=""
            style="--group-count: 2; --group-index: 0;"
            type="button"
          >
            view
          </button>
          <button
            class="chakra-button css-11vqng1"
            type="button"
          >
            edit
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;
